app/assets/stylesheets/api/stories.scss
// Place all the styles related to the Api::Stories controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

//************ StoryIndex styles ***************************************
.stories-index {
  display: flex;
  flex-wrap: wrap;
  width: 75%;
  margin: 5% auto;

}

//************ StoryIndexThumb styles **********************************
.story-thumb {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  flex-basis: 33%;
  min-width: 260px;
  align-items: flex-start;
  justify-content: space-between;
  border: 1px solid lightgrey;
  border-radius: 3px;
  // height: 260px;
  // padding: 3%;
  margin: 1%;
}

.story-thumb:hover {
  box-shadow: 0 1px 4px rgba(0,0,0,.04);
  border: 1px solid rgba(0,0,0,.09);
}

.story-thumb h1 {
  font-size: 22px;
  font-weight: 700;
  margin: 12px 0 10px 0;
}

.story-thumb p, .story-thumb h3 {
  font-size: 14px;
  color: rgba(0,0,0,.7);
  white-space: pre-line;
  margin-bottom: 12px;
}

.story-thumb-image {
  height: 160px;
  width: 100%;
}

.story-thumb-image img {
  object-fit: cover;
  height: 100%;
}

.story-thumb-content {
  flex: 1;
}

.story-thumb-content, .story-thumb .user-thumb {
  margin: 0 4% 5% 4%;
}

//************ ShowStory styles ****************************************
.story-wrapper {
  width: 60%;
  margin: 5% auto;
  padding: 10px;
}

.story {
  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
  color: rgba(0,0,0,.8);
  line-height: 1.4;
}

.story-wrapper * {
  padding: 5px 0;
}

.story h2 {
  font-size: 30px;
}

.story h3 {
  font-size: 20px;
  color: rgba(0,0,0,.54);
  margin-bottom: 12px;
}

.story p {
  font-size: 18px;
  margin-top: 10px;
  padding-bottom: 30px;
  border-bottom: 1px solid lightgrey;
  // white-space: pre-line honors line breaks coming form text area input
  white-space: pre-line;
}

.story p a, .comment-item p a {
  // text-decoration: underline;
  background: honeydew;
  font-size: smaller;
}

.story-info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 10px;
}

.story-info .edit-links * {
  padding-left: 5px;
}

.story-info .edit-links *:hover {
  color: orange;
}

//************ StoryForm styles ****************************************
.story-form {
  width: 100%;
  margin: 5% auto;
  // padding: 10px;
}

.story-form * {
  margin: 5px;
  padding: 5px;
}

.story-form .session-errors, .story-form ul {
  padding: 0;
}

.story-form ul {
  margin-left: 0;
}

// greenish color for backgorund #e2f9e8;
// light yellow #ffd
.story-form *:hover {
  background: #e2f9e8;
}

.story-form textarea {
  width: 90%;
  min-height: 400px;
}

.story-form-input-title {
  width: 90%;
  font-size: 30px;
}

.story-form-input-description {
  width: 90%;
  font-style: italic;
}

